--- a/background/style.css
+++ b/background/style.css
@@ -5,13 +5,16 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh; /* Chiếm toàn bộ chiều cao của viewport */
+  overflow: hidden;
 }
 
 .container {
   display: flex;
+  flex-direction: column; /* Arrange children vertically */
   align-items: center;
   justify-content: center;
-  height: 100vh; 
+  height: 100vh;
+  width: 100vw;
 }
 
 .box::before {
