--- a/background/happy/style.css
+++ b/background/happy/style.css
@@ -9,3 +9,7 @@ body {
 	align-items: center;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
+@media (max-width: 600px) {
+  .gif-container {
+    flex-direction: column;
+  }
